# alg-lab

./: .gitignore  CMakeLists.txt  README.md  run_results.txt
data/exact_cover_benchmark/: bell-03.ec  bell-04.ec  bell-05.ec  bell-06.ec  bell-07.ec  bell-08.ec  bell-09.txt  bell-10.txt  bell-11.ec  bell-12.ec  doublefact-01.ec  doublefact-03.ec  doublefact-05.ec  doublefact-07.ec  doublefact-09.ec  doublefact-11.ec  doublefact-13.ec  doublefact-15.ec  doublefact-17.txt  doublefact-19.txt  doublefact-21.ec  doublefact-23.ec  doublefact-25.ec  doublefact-27.ec  doublefact-29.ec  kts15-ptpt-0001.ec  kts15-ptpt-0002.ec  kts15-ptpt-0003.ec  kts15-ptpt-0004.ec  kts15-ptpt-0005.ec  kts15-ptpt-0006.ec  kts15-ptpt-0007.ec  kts15-ptpt-0008.ec  kts15-ptpt-0009.ec  kts15-ptpt-0010.ec  kts15-ptpt-0011.ec  kts15-ptpt-0012.ec  kts15-ptpt-0013.ec  kts15-ptpt-0014.ec  kts15-ptpt-0020.txt  (+32 more)
data/run_set/: Aarnet.txt  Abilene.txt  Abvt.txt  Aconet.txt  Agis.txt  Ai3.txt  Airtel.txt  Amres.txt  Ans.txt  Arn.txt  Arnes.txt  Arpanet19723.txt  AttMpls.txt  Azrena.txt  Bandcon.txt  Basnet.txt  Bbnplanet.txt  Bellcanada.txt  Bellsouth.txt  Belnet2003.txt  Belnet2005.txt  Belnet2006.txt  Belnet2007.txt  Belnet2010.txt  BeyondTheNetwork.txt  Bics.txt  Biznet.txt  Bren.txt  BsonetEurope.txt  BtAsiaPac.txt  BtEurope.txt  Canerie.txt  Carnet.txt  Cernet.txt  (+167 more)
include/: Block.h  ComponentDetector.h  DXD.h  DXDTime.h  DancingMatrix.h  SplayETT.h  SplayTree.h  ThreadPool.h  common.h
src/: ComponentDetector.cpp  DXDSolver.cpp  DXDTime.cpp  DancingMatrix.cpp  DynamicGraph.cpp  SplayTree.cpp  main.cpp
